# haskellshop

./: .gitignore  LICENSE  README.md  haskellshop.cabal  site_key.txt  stack.yaml
db/: setup.sql
snaplets/heist/templates/: _base.tpl  _nav.tpl  basket.tpl  browse.tpl  checkout.tpl  err.tpl  index.tpl  order_confirmation.tpl  payment.tpl  product.tpl
snaplets/heist/templates/admin/: _base.tpl  _categories.tpl  _err.tpl  _index.tpl  _interpreted.tpl  _interpreted_categories_children.tpl  _nav.tpl  _order.tpl  _product.tpl  _products.tpl  _variants.tpl  login.tpl
snaplets/postgresql-simple/: devel.cfg
src/: Application.hs  Basket.hs  FormUtil.hs  HeistUtil.hs  Main.hs2  Site.hs
src/Admin/: Admin.hs  Categories.hs  Feedback.hs  NewProduct.hs  ProductVariants.hs
src/Frontend/: Frontend.hs
src/Render/: Alerts.hs  Basket.hs  Categories.hs  Countries.hs  Order.hs  Orders.hs  Payment.hs  Product.hs  Products.hs  Variants.hs
src/ShopData/: Category.hs  Order.hs  OrderAddress.hs  OrderItem.hs  Product.hs  ProductDetail.hs  ProductVariantOption.hs  Thumbnail.hs  Variant.hs  VariantOption.hs
static/css/: bootstrap-navtabs.css  main.css  responsive-nav.css
